# singularity

./: .env.template  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  compose.prod.yaml  compose.yaml  openapi.json  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: actionlint.yml  ci-audit.yml  ci-build.yml  ci-lint.yml  ci-test.yml  ci.yml  cleanup.yml  codeql.yml  semantic-pr.yml
alembic/: env.py
alembic/versions/: 54ed9693d8cd_api_key.py
plans/: 01-core.md  02-database.md  03-auth.md  04-tasks.md  05-observability.md  06-tracing.md  07-dx.md  08-scripts.md  09-dashboard.md
plans/dasboard_ui_proto/: Observatory.dc.html
src/: app.py
src/auth/: deps.py  protocol.py
src/cli/: main.py
src/common/: cache.py  http.py  lock.py  logger.py  pagination.py  redis.py  websocket.py
src/config/: settings.py
src/core/: asgi.py  context.py  errors.py  loader.py  middleware.py  registrar.py  responses.py  schema.py  scripts.py
src/database/: base.py  engine.py
src/models/: __init__.py  api_key_model.py
src/obs/: __init__.py  dashboard.py  dataviews.py  pipeline.py  proto_adapter.py  red.py  store.py  transports.py
src/tasks/: celery_app.py  example.py  obs_maintenance.py  worker.py
src/tracing/: engine.py  journey.py
tests/: conftest.py  test_auth.py  test_cache_lock.py  test_cli.py  test_core.py  test_dashboard.py  test_dataviews.py  test_db.py  test_engine.py  test_nplus1_replay.py  test_obs.py  test_scripts.py  test_store.py  test_sweep.py  test_tasks.py  test_tracing.py
(+5 files in other folders)
