[project]
name = "singularity"
version = "0.1.0"
description = "FastAPI boilerplate: fastest path from git clone to a production-grade backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.34",
    "orjson>=3.10",
    "pydantic-settings>=2.7",
    "loguru>=0.7",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "pyjwt[crypto]>=2.10",
    "httpx>=0.28",
    "celery>=5.4",
    "celery-redbeat>=2.4.1",
    "psycopg[binary]>=3.3.4",
    "click>=8.1",
    "pydantic[email]>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.15.22",
]

[project.scripts]
server = "src.app:main"
worker = "src.tasks.worker:main"
sg = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
plugins = ["pydantic.mypy"]
